[package]
name = "evm"
version = "0.17.0"
license = "Apache-2.0"
authors = ["Brock Elmore <brock@topo.finance>", "Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "CompEVM - an Ethereum Virtual Machine built for smart contract composability & development"
repository = "https://github.com/brockelmore/rust-cevm"
keywords = ["no_std", "ethereum", "composability"]
edition = "2018"

[dependencies]
evm-core = { version = "0.17", path = "core", default-features = false }
evm-gasometer = { version = "0.17", path = "gasometer", default-features = false }
evm-runtime = { version = "0.17", path = "runtime", default-features = false }
sha3 = { version = "0.8", default-features = false }
rlp = { version = "0.4", default-features = false }
primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
serde_json = "1.0"
serde = { version = "1.0.90", features = ["derive"], optional = true }
jsonrpc-core = "14.0.0"
reqwest = { version = "0.10.7", features = ["blocking", "json"]}
ethers-core = "^0.5"
url = { version = "2.1.1", default-features = false}
thiserror = { version = "1.0.15", default-features = false }
web3 = { version = "0.17.0" }
hex = "0.4.2"

[features]
default = ["std", "local"]
with-serde = ["serde", "primitive-types/serde"]
std = ["evm-core/std", "evm-gasometer/std", "evm-runtime/std", "sha3/std", "primitive-types/std", "serde/std"]
web = []
local = []


[workspace]
members = [
  "core",
  "gasometer",
  "runtime",
  "implementation",
  "service",
  "testing",
  "rust_solc"
]
