[package]
name = "implementation"
version = "0.1.0"
authors = ["b <brock.elmore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm = { path = "../", features = ["local", "std"] }
primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
ethers-core = "^0.5"
hex = "0.4"
