[package]
name = "service"
version = "0.1.0"
authors = ["Brock Elmore <brock.elmore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = "0.1.3"
jsonrpc-core = "15.1.0"
jsonrpc-derive = "15.1.0"
primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
evm = { path = "../", features = ["local", "std", "with-serde"] }
jsonrpc-core-client = "15.1.0"
serde = { version = "1.0.116", features = ["derive"], optional = false }
actix = "0.10"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
bincode = "1.3.1"
sha3 = { version = "0.8", default-features = false }
rlp = "0.4.6"
hash = { package = "keccak-hash", version = "0.5" }
parity-crypto = { version = "0.6.1", features = ["publickey"] }
ethereum-types = "0.9.0"
actix-rt = "1.1.1"
bytes = "0.5"
serde_json = "1.0"
hyper = "0.13.4"

[dev-dependencies]
