[package]
name = "Testing"
version = "0.1.0"
authors = ["Brock Elmore <brock.elmore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
actix = "0.10"
actix-rt = "1.1.1"
solc = { path ="../rust_solc" }

glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"
hyper = "0.13.4"

[dev-dependencies]
