[package]
name = "Testing"
version = "0.1.0"
authors = ["Brock Elmore <brock.elmore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
actix = "0.10"
actix-rt = "1.1.1"
solc = { path ="../rust_solc" }
web3 = { version = "0.17.0" }
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"
hyper = "0.13.4"
hex = "0.4.2"
ethabi-next = "12.0.1"
evm = { path = "../", features = ["local", "std", "with-serde"] }
hash = { package = "keccak-hash", version = "0.5" }
tiny-keccak = "1.4"
bytes = "0.5"
futures = "0.3.6"
hyper-staticfile = "0.5.3"
percent-encoding = "2.1.0"
log = "0.4.8"
mime = "0.3.14"
mime_guess = "2.0.1"
tokio = { version = "0.3.0", default-features = false, features = ["fs", "rt"]}
tokio-util = { version = "0.4.0", default-features = false, features = ["codec"] }
flate2 = "1.0"

[dev-dependencies]
