[package]
name = "example"
version = "0.1.0"
authors = ["Maximilian Krüger <kruemaxi@googlemail.com>"]

[dependencies]
solc = { path = ".." }
ethabi = { git = "https://github.com/paritytech/ethabi" }
ethabi-derive = { git = "https://github.com/paritytech/ethabi" }
ethabi-contract = { git = "https://github.com/paritytech/ethabi" }
serde_json = "1.0.20"

[build-dependencies]
solc = { path = ".." }
